# kird_space_2025

./: README.md  pyproject.toml
kari_cloud_seg/: predict.py  pyproject.toml  train.py
kari_cloud_seg/utils/: kari_cloud_dataset.py  loss.py  metrics.py  plots.py
kari_road_seg/: 0_opencv.py  1_plot_color_label.py  2_plot_overlay.py  3_argparse.py  predict.py  pyproject.toml  train.py
kari_road_seg/utils/: kari_roads_dataset.py  loss.py  plots.py
mmrotate/DOTA_devkit/: kari_objects_33cls_mini_evaluation_task1.py
mmrotate/configs/_base_/datasets/: kari_objects_33cls_mini.py
mmrotate/configs/roi_trans/: roi_trans_r50_fpn_1x_kari_objects_33cls_mini_le90.py  roi_trans_r50_fpn_1x_kari_objects_33cls_mini_ms_le90.py
mmrotate/mmrotate/datasets/: __init__.py  kari_objects_33cls_mini.py
mmrotate/tools/data/kari_objects_33cls_mini/split/split_configs/: ms_train.json  ms_val.json
mmsegmentation/configs/_base_/datasets/: kari_roads_mini_datasets.py
mmsegmentation/configs/_base_/models/: pspnet_r50-d8_kari_roads_mini.py
mmsegmentation/configs/pspnet/: pspnet_r101-d8_4xb2-40k_kari_roads_mini-1024x1024.py
mmsegmentation/mmseg/datasets/: __init__.py  kari_roads_mini.py
ultralytics/ultralytics/cfg/datasets/: kari_objects_33cls.yaml
utils/kari_buildings/: conv_json_to_png.py
utils/kari_objects_33cls/: conv_json_to_coco.py  conv_json_to_dota.py  conv_json_to_geojson.py  conv_json_to_yolo.py
utils/kari_roads/: conv_json_to_png.py
